--- a/Client/index.html
+++ b/Client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/logo/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FlixList - Movie tracker</title>
+    <title>FlixList - Discover & Track Movies</title>
   </head>
   <body>
     <div id="root"></div>
